--- a/fk-things-library/build.gradle
+++ b/fk-things-library/build.gradle
@@ -44,13 +44,15 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.squareup.okio:okio:1.13.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+
     // photo
     compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.alibaba:fastjson:1.1.56.android'
     // rxJava
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.0.8'
-    compile 'org.reactivestreams:reactive-streams:1.0.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+    compile 'org.reactivestreams:reactive-streams:1.0.2'
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
     // downloader
     compile 'com.liulishuo.filedownloader:library:1.6.9'
