snackbar, dialog等工具 mac address 加密http请求

--- a/fk-things-library/build.gradle
+++ b/fk-things-library/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     // downloader
     compile 'com.liulishuo.filedownloader:library:1.6.9'
     compile 'com.google.guava:guava:24.1-android'
+
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+
 }
